--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{{site.baseurl}}/">{{site.title}}</a>
+        <a class="navbar-brand" href="{{site.baseurl}}">{{site.title}}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,7 +20,7 @@
             <div class="navbar-nav">
 
                 {% for el in site.data.navigation.navs %}
-                <a class="nav-link" href="{{site.baseurl}}/{{el.url}}">{{el.title}}</a>
+                <a class="nav-link" href="{{site.baseurl}}{{el.url}}">{{el.title}}</a>
                 {% endfor %}
             </div>
         </div>
